# embedded-llm

./: Cargo.toml  README.md
crates/embedded-llm/: Cargo.toml
crates/embedded-llm-tools/: Cargo.toml
crates/embedded-llm-tools/src/: lib.rs
crates/embedded-llm/src/: lib.rs
src/: lib.rs
